--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
-  <nav>
+
+
+  <nav id="main-nav">
     <h1 class="name">Juan Mariño</h1>
     <ul id="nav-sections">
       <li class="nav-section">Home</li>
@@ -22,6 +25,29 @@
       <li class="nav-section">Bio</li>
     </ul>
   </nav>
-  
+
+
+  <div id="profile">
+    <img src="img/Profile Pic.png" alt="Default profile picture" class="profile-pic">
+    <p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to pull my skills to use!</p>
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
