--- a/index.html
+++ b/index.html
@@ -35,17 +35,21 @@
 
 
 
+  <div id="portfolio">
+    <h1 class="portfolio-title">Portfolio</h1>
+
+
+
+    <div class="project">
+      <img src="img/Portfolio-1.png" alt="Marketing Page" class="project-pic">
+      <h2 class="project-title">Marketing Page</h2>
+      <p class="project-text">This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
+    </div>
 
 
 
 
-
-
-
-
-
-
-
+  </div>
 
 
 
