Flexbox and Project sample
-Created a card container for the project samples.
-Added the second project sample.

--- a/index.html
+++ b/index.html
@@ -40,11 +40,30 @@
 
 
 
+
+
+
+
+
+
     <div class="project">
       <img src="img/Portfolio-1.png" alt="Marketing Page" class="project-pic">
       <h2 class="project-title">Marketing Page</h2>
       <p class="project-text">This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
     </div>
+
+
+    
+    <div class="project">
+      <img src="img/Portfolio-2.png" alt="Marketing Page" class="project-pic">
+      <h2 class="project-title">Search Page</h2>
+      <p class="project-text">This project searches through a specific database to find information that the user is trying to look up.</p>
+    </div>
+
+
+
+
+
 
 
 
