--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
 
 
 
+
+
+
+
+
+
       <div class="project">
         <img src="img/Portfolio-1.png" alt="Marketing Page" class="project-pic">
         <h2 class="project-title">Marketing Page</h2>
@@ -62,10 +68,25 @@
 
       
       <div class="project">
-        <img src="img/Portfolio-2.png" alt="Marketing Page" class="project-pic">
+        <img src="img/Portfolio-2.png" alt="Search Page project" class="project-pic">
         <h2 class="project-title">Search Page</h2>
         <p class="project-text">This project searches through a specific database to find information that the user is trying to look up.</p>
       </div>
+
+
+      
+
+      <div class="project">
+        <img src="img/Portfolio-3.png" alt="Travel App project" class="project-pic">
+        <h2 class="project-title">Travel App</h2>
+        <p class="project-text">This project compares travel times based on different transportation methods and tells you the best one.</p>
+      </div>
+
+
+
+
+
+
 
 
 
