--- a/index.html
+++ b/index.html
@@ -74,12 +74,19 @@
       </div>
 
 
-      
+
 
       <div class="project">
         <img src="img/Portfolio-3.png" alt="Travel App project" class="project-pic">
         <h2 class="project-title">Travel App</h2>
         <p class="project-text">This project compares travel times based on different transportation methods and tells you the best one.</p>
+      </div>
+
+
+      <div class="project">
+        <img src="img/Portfolio-4.png" alt="Map project" class="project-pic">
+        <h2 class="project-title">Map of Favorite Spots</h2>
+        <p class="project-text">This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
       </div>
 
 
