--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 
       <div class="project">
-        <img src="img/Portfolio-1.png" alt="Marketing Page" class="project-pic">
+        <img src="img/Portfolio-1.png" alt="Marketing Page project" class="project-pic">
         <h2 class="project-title">Marketing Page</h2>
         <p class="project-text">This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
       </div>
@@ -87,6 +87,13 @@
         <img src="img/Portfolio-4.png" alt="Map project" class="project-pic">
         <h2 class="project-title">Map of Favorite Spots</h2>
         <p class="project-text">This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
+      </div>
+
+
+      <div class="project">
+        <img src="img/Portfolio-5.png" alt="Photo Gallery project" class="project-pic">
+        <h2 class="project-title">Photo Gallery</h2>
+        <p class="project-text">This project shows from a recent trip to the viewer and allows them to easily navigate through photos.</p>
       </div>
 
 
