--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
       <li class="nav-section">Bio</li>
     </ul>
   </nav>
-
-
   <div id="profile">
     <img src="img/Profile Pic.png" alt="Default profile picture" class="profile-pic">
     <p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to pull my skills to use!</p>
   </div>
+
+
+  <hr class="separator">
 
 
 
@@ -42,61 +43,32 @@
 
 
 
-
-
-
     <div class="projects-container">
-
-
-
-
-
-
-
-
-
-
-
-
       <div class="project">
         <img src="img/Portfolio-1.png" alt="Marketing Page" class="project-pic">
         <h2 class="project-title">Marketing Page</h2>
         <p class="project-text">This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
       </div>
-
-
-
-      
       <div class="project">
         <img src="img/Portfolio-2.png" alt="Search Page" class="project-pic">
         <h2 class="project-title">Search Page</h2>
         <p class="project-text">This project searches through a specific database to find information that the user is trying to look up.</p>
       </div>
-
-
-
-
       <div class="project">
         <img src="img/Portfolio-3.png" alt="Travel App" class="project-pic">
         <h2 class="project-title">Travel App</h2>
         <p class="project-text">This project compares travel times based on different transportation methods and tells you the best one.</p>
       </div>
-
-
       <div class="project">
         <img src="img/Portfolio-4.png" alt="Map" class="project-pic">
         <h2 class="project-title">Map of Favorite Spots</h2>
         <p class="project-text">This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
       </div>
-
-
       <div class="project">
         <img src="img/Portfolio-5.png" alt="Photo Gallery" class="project-pic">
         <h2 class="project-title">Photo Gallery</h2>
         <p class="project-text">This project shows from a recent trip to the viewer and allows them to easily navigate through photos.</p>
       </div>
-
-
       <div class="project">
         <img src="img/Portfolio-6.png" alt="Calculator" class="project-pic">
         <h2 class="project-title">Calculator</h2>
