--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,10 +11,14 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
+
+
+
+
+
+
+
 <body>
-
-
-
   <nav id="main-nav">
     <h1 class="name">Juan Mariño</h1>
     <ul id="nav-sections">
@@ -29,16 +32,13 @@
     <img src="img/Profile Pic.png" alt="Default profile picture" class="profile-pic">
     <p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to pull my skills to use!</p>
   </div>
-
-
   <hr class="separator">
-
-
-
-
   <div id="portfolio">
-    <h1 class="portfolio-title">Portfolio</h1>
 
+
+
+
+    <h2 class="section-title">Portfolio</h2>
 
 
 
@@ -46,56 +46,53 @@
     <div class="projects-container">
       <div class="project">
         <img src="img/Portfolio-1.png" alt="Marketing Page" class="project-pic">
-        <h2 class="project-title">Marketing Page</h2>
+        <h3 class="project-title">Marketing Page</h3>
         <p class="project-text">This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
       </div>
       <div class="project">
         <img src="img/Portfolio-2.png" alt="Search Page" class="project-pic">
-        <h2 class="project-title">Search Page</h2>
+        <h3 class="project-title">Search Page</h3>
         <p class="project-text">This project searches through a specific database to find information that the user is trying to look up.</p>
       </div>
       <div class="project">
         <img src="img/Portfolio-3.png" alt="Travel App" class="project-pic">
-        <h2 class="project-title">Travel App</h2>
+        <h3 class="project-title">Travel App</h3>
         <p class="project-text">This project compares travel times based on different transportation methods and tells you the best one.</p>
       </div>
       <div class="project">
         <img src="img/Portfolio-4.png" alt="Map" class="project-pic">
-        <h2 class="project-title">Map of Favorite Spots</h2>
+        <h3 class="project-title">Map of Favorite Spots</h3>
         <p class="project-text">This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
       </div>
       <div class="project">
         <img src="img/Portfolio-5.png" alt="Photo Gallery" class="project-pic">
-        <h2 class="project-title">Photo Gallery</h2>
+        <h3 class="project-title">Photo Gallery</h3>
         <p class="project-text">This project shows from a recent trip to the viewer and allows them to easily navigate through photos.</p>
       </div>
       <div class="project">
         <img src="img/Portfolio-6.png" alt="Calculator" class="project-pic">
-        <h2 class="project-title">Calculator</h2>
+        <h3 class="project-title">Calculator</h3>
         <p class="project-text">Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
       </div>
-
-
-
-
-
-
-
-
-
-
-
     </div>
-
-
-
-
-
-
-
-
-
   </div>
+
+
+
+
+
+
+
+
+  <hr class="separator">
+
+  <div id="bio">
+    <h2 class="section-title">More about me...</h2>
+    <p>Born in Colombia and raised in the USA, I discovered my passion for web development in recent years, and it ignited a spark within me. As I delved into coding languages, I witnessed the intricate world of websites unfold before my eyes. Crafting every line of code and breathing life into websites fueled my passion even more.</p>
+    <p>Each project I undertook allowed me to refine my skills, overcome challenges, and experience the sheer joy of witnessing my creations come to life. Web development has become my true calling, where creativity and problem-solving converge to shape the digital landscape.</p>
+  </div>
+
+
 
 
 
