--- a/index.html
+++ b/index.html
@@ -92,9 +92,35 @@
     <p>Each project I undertook allowed me to refine my skills, overcome challenges, and experience the sheer joy of witnessing my creations come to life. Web development has become my true calling, where creativity and problem-solving converge to shape the digital landscape.</p>
   </div>
 
+
+
+
+
   <div id="contact">
     <h2 class="section-title">Contact</h2>
-    <p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
+    <p class="contact-intro">If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
+
+
+
+
+
+    <div class="contact-phone">
+
+
+      <img src="img/phone.png" alt="Phone Icon">
+      <p>Phone</p>
+
+      <a href="cel:+15551234567">
+        +1(555)123-4567
+      </a>
+
+
+    </div>
+
+
+
+
+
   </div>
 
 
