Finished Contact section
Added Email & Finished Contact section.

--- a/index.html
+++ b/index.html
@@ -104,18 +104,40 @@
 
 
 
+
+
+
+
+
+
+
+
     <div class="contact-phone">
-
-
       <img src="img/phone.png" alt="Phone Icon">
       <p>Phone</p>
-
-      <a href="cel:+15551234567">
-        +1(555)123-4567
-      </a>
-
-
+      <a href="cel:+15551234567">+1(555)123-4567</a>
     </div>
+
+    <div class="contact-email">
+      <img src="img/email.png" alt="Email Icon">
+      <p>Email</p>
+      <a href = "mailto:abc@example.com">abc@example.com</a>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
