--- a/index.html
+++ b/index.html
@@ -10,14 +10,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
-
-
-
-
-
-
-
-
 <body>
   <nav id="main-nav">
     <h1 class="name">Juan Mariño</h1>
@@ -34,15 +26,7 @@
   </div>
   <hr class="separator">
   <div id="portfolio">
-
-
-
-
     <h2 class="section-title">Portfolio</h2>
-
-
-
-
     <div class="projects-container">
       <div class="project">
         <img src="img/Portfolio-1.png" alt="Marketing Page" class="project-pic">
@@ -76,78 +60,31 @@
       </div>
     </div>
   </div>
-
-
-
-
-
-
-
-
   <hr class="separator">
-
   <div id="bio">
     <h2 class="section-title">More about me...</h2>
     <p>Born in Colombia and raised in the USA, I discovered my passion for web development in recent years, and it ignited a spark within me. As I delved into coding languages, I witnessed the intricate world of websites unfold before my eyes. Crafting every line of code and breathing life into websites fueled my passion even more.</p>
     <p>Each project I undertook allowed me to refine my skills, overcome challenges, and experience the sheer joy of witnessing my creations come to life. Web development has become my true calling, where creativity and problem-solving converge to shape the digital landscape.</p>
   </div>
-
-
-
-
-
   <div id="contact">
     <h2 class="section-title">Contact</h2>
     <p class="contact-intro">If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
-
-
-
-
-
-
-
-
-
-
-
-
-
     <div class="contact-phone">
       <img src="img/phone.png" alt="Phone Icon">
       <p>Phone</p>
       <a href="cel:+15551234567">+1(555)123-4567</a>
     </div>
-
     <div class="contact-email">
       <img src="img/email.png" alt="Email Icon">
       <p>Email</p>
       <a href = "mailto:abc@example.com">abc@example.com</a>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
   </div>
-
-
-
-
-
+  <footer>
+    <h4>Juan Mariño</h4>
+    <a href="#main-nav">
+      <h4>Back to Top</h4>
+    </a>
+  </footer>
 </body>
 </html>
