--- a/index.html
+++ b/index.html
@@ -14,10 +14,18 @@
   <nav id="main-nav">
     <h1 class="name">Juan Mariño</h1>
     <ul id="nav-sections">
-      <li class="nav-section">Home</li>
-      <li class="nav-section">Portfolio</li>
-      <li class="nav-section">Bio</li>
-      <li class="nav-section">Contact</li>
+      <li class="nav-section">
+        <a href="#main-nav">Home</a>
+      </li>
+      <li class="nav-section">
+        <a href="#portfolio">Portfolio</a>
+      </li>
+      <li class="nav-section">
+        <a href="#bio">Bio</a>
+      </li>
+      <li class="nav-section">
+        <a href="#contact">Contact</a>
+      </li>
     </ul>
   </nav>
   <div id="profile">
