--- a/index.html
+++ b/index.html
@@ -28,13 +28,57 @@
       </li>
     </ul>
   </nav>
+  
+  
+
+
+
+
+
+
+
+
+
   <div id="profile">
     <img src="img/Profile Pic.png" alt="Default profile picture" class="profile-pic">
     <p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to pull my skills to use!</p>
   </div>
+
+
+
+
+
+
+
+
+
+
   <hr class="separator">
+
+
+
+
+
+
+
+
+
+
   <div id="portfolio">
     <h2 class="section-title">Portfolio</h2>
+
+
+
+
+
+
+
+
+
+
+
+
+    
     <div class="projects-container">
       <div class="project">
         <img src="img/Portfolio-1.png" alt="Marketing Page" class="project-pic">
@@ -67,27 +111,89 @@
         <p class="project-text">Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
       </div>
     </div>
+
+
+
+
+
+
+
+
+
+
   </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
   <hr class="separator">
   <div id="bio">
     <h2 class="section-title">More about me...</h2>
     <p>Born in Colombia and raised in the USA, I discovered my passion for web development in recent years, and it ignited a spark within me. As I delved into coding languages, I witnessed the intricate world of websites unfold before my eyes. Crafting every line of code and breathing life into websites fueled my passion even more.</p>
     <p>Each project I undertook allowed me to refine my skills, overcome challenges, and experience the sheer joy of witnessing my creations come to life. Web development has become my true calling, where creativity and problem-solving converge to shape the digital landscape.</p>
   </div>
+
+
+
+
+
+
+
+
   <div id="contact">
+    
     <h2 class="section-title">Contact</h2>
-    <p class="contact-intro">If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
-    <div class="contact-phone">
-      <img src="img/phone.png" alt="Phone Icon">
-      <p>Phone</p>
-      <a href="cel:+15551234567">+1(555)123-4567</a>
+
+
+
+
+
+    <div class="contact-flex">
+      <p class="contact-intro">If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
+
+
+      <div class="phone-email-wrapper">
+        <div class="contact-phone">
+          <img src="img/phone.png" alt="Phone Icon">
+          <p>Phone</p>
+          <a href="cel:+15551234567">+1(555)123-4567</a>
+        </div>
+        <div class="contact-email">
+          <img src="img/email.png" alt="Email Icon">
+          <p>Email</p>
+          <a href = "mailto:abc@example.com">abc@example.com</a>
+        </div>
+      </div>
+
+
+
     </div>
-    <div class="contact-email">
-      <img src="img/email.png" alt="Email Icon">
-      <p>Email</p>
-      <a href = "mailto:abc@example.com">abc@example.com</a>
-    </div>
+
+
+
+
+
+
   </div>
+
+
+
+
+
+
+
+
+
+
   <footer>
     <h4>Juan Mariño</h4>
     <a href="#main-nav">
