Updating project for 768px-sized screens

--- a/index.html
+++ b/index.html
@@ -11,8 +11,21 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+
+
+
+
   <nav id="main-nav">
+
+
+
+
     <h1 class="name">Juan Mariño</h1>
+
+
+
+
     <ul id="nav-sections">
       <li class="nav-section">
         <a href="#main-nav">Home</a>
@@ -27,6 +40,11 @@
         <a href="#contact">Contact</a>
       </li>
     </ul>
+
+
+
+
+
   </nav>
   
   
@@ -161,18 +179,37 @@
       <p class="contact-intro">If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
 
 
+
+
+
+
+
       <div class="phone-email-wrapper">
+
+
+
         <div class="contact-phone">
           <img src="img/phone.png" alt="Phone Icon">
           <p>Phone</p>
           <a href="cel:+15551234567">+1(555)123-4567</a>
         </div>
+
+
         <div class="contact-email">
           <img src="img/email.png" alt="Email Icon">
           <p>Email</p>
           <a href = "mailto:abc@example.com">abc@example.com</a>
         </div>
+
+
+
       </div>
+
+
+
+
+
+
 
 
 
@@ -199,6 +236,46 @@
     <a href="#main-nav">
       <h4>Back to Top</h4>
     </a>
+    <!-- <ul id="nav-sections">
+      <li class="nav-section">
+        <a href="#main-nav">Home</a>
+      </li>
+      <li class="nav-section">
+        <a href="#portfolio">Portfolio</a>
+      </li>
+      <li class="nav-section">
+        <a href="#bio">Bio</a>
+      </li>
+      <li class="nav-section">
+        <a href="#contact">Contact</a>
+      </li>
+    </ul> -->
   </footer>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
