Finshed for 768px
Finished project for 768px-sized screens.

--- a/index.html
+++ b/index.html
@@ -233,23 +233,33 @@
 
   <footer>
     <h4>Juan Mariño</h4>
-    <a href="#main-nav">
+    <a href="#main-nav" class="back-to-top">
       <h4>Back to Top</h4>
     </a>
-    <!-- <ul id="nav-sections">
-      <li class="nav-section">
+
+
+
+    <ul id="nav-sections_2">
+      <li class="nav-section_2">
         <a href="#main-nav">Home</a>
       </li>
-      <li class="nav-section">
+      <li class="nav-section_2">
         <a href="#portfolio">Portfolio</a>
       </li>
-      <li class="nav-section">
+      <li class="nav-section_2">
         <a href="#bio">Bio</a>
       </li>
-      <li class="nav-section">
+      <li class="nav-section_2">
         <a href="#contact">Contact</a>
       </li>
-    </ul> -->
+    </ul>
+
+
+
+
+
+
+
   </footer>
 
 
