--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </ul>
   </nav>
   <div id="profile">
-    <img src="img/Profile Pic.png" alt="Default profile picture" class="profile-pic">
+    <img src="img/Profile-Pic.png" alt="Default profile picture" class="profile-pic">
     <p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to pull my skills to use!</p>
   </div>
   <hr class="separator">
